--- a/Week1/day2/cssanimation.html
+++ b/Week1/day2/cssanimation.html
@@ -7,6 +7,20 @@
     <title>CSS Animation</title>
 </head>
 <body>
-    
+    <div class="fade">fade</div>
+    <br><br>
+    <div class="color">Change color</div>
+    <br><br>
+    <div class="grow shrink">Grow and Shrink</div>
+    <br><br>
+    <div class="rotate">Rotate</div>
+    <br><br>
+    <div class="circle">Square to circle</div>
+    <br><br>
+    <div class="threed">3D Shadow effect</div>
+    <br><br>
+    <div class="swing">Swing effect</div>
+    <br><br>
+    <div class="border">Inset Border</div>
 </body>
 </html>
