--- a/Week2/day6/components.html
+++ b/Week2/day6/components.html
@@ -1,44 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <title>Bootstrap Navbar</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bootstrap Components Exercise</title>
+
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-DbbDUy3crFkPzq03hE3e2k3CKnH0C2P2w2IvAyJIfUsN05Zj4fwBtTOSzO5pSuwmmyBfdrkNYTQ6E6pvD6uEw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <style>
+    body {
+      padding-top: 70px;
+    }
+  </style>
 </head>
-<body style="background-color: black;">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
+<body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container-fluid">
     <a class="navbar-brand" href="#">Project Exercise #9</a>
 
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Contacts</a></li>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+      aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <!-- Left-side links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact <span class="badge bg-light text-dark">3</span></a>
+        </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
             Dropdown
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Option 1</a></li>
+            <li><a class="dropdown-item" href="#">Option 2</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Separated link</a></li>
           </ul>
         </li>
       </ul>
 
-      <!-- Login form -->
-      <form class="d-flex" role="login">
-        <input type="email" class="form-control-sm me-2" placeholder="Email">
-        <input type="password" class="form-control-sm me-2" placeholder="Password">
-        <button class="btn btn-primary" type="submit">Sign in</button>
+      <!-- Right-side sign-in form -->
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="email" placeholder="Email" aria-label="Email">
+        <input class="form-control me-2" type="password" placeholder="Password" aria-label="Password">
+        <button class="btn btn-success" type="submit">Sign in</button>
       </form>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Jumbotron -->
+<div class="p-5 bg-light text-start w-100">
+  <div class="container">
+    <h1 class="mb-3">Heading</h1>
+    <h4 class="mb-3">Subheading</h4>
+    <a class="btn btn-primary" href="#" role="button">Learn more</a>
+  </div>
+</div>
+
+<!-- Three Column Section -->
+<div class="container my-5">
+  <div class="row">
+    <!-- Column 1 -->
+    <div class="col-md-4">
+      <h2>Heading</h2>
+      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo.</p>
+      <a class="btn btn-outline-secondary btn-md" href="#">
+        <i class="fas fa-info-circle"></i> View Details
+      </a>
+    </div>
+
+    <!-- Column 2 -->
+    <div class="col-md-4">
+      <h2>Heading</h2>
+      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo.</p>
+      <a class="btn btn-outline-secondary btn-md" href="#">
+        <i class="fas fa-info-circle"></i> View Details
+      </a>
+    </div>
+
+    <!-- Column 3 -->
+    <div class="col-md-4">
+      <h2>Heading <span class="badge bg-info text-dark">New</span></h2>
+      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+      <a class="btn btn-outline-secondary btn-md" href="#">
+        <i class="fas fa-map-marker-alt"></i> View Details
+      </a>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap 5 JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
